# mycroft-precise

./: Jenkinsfile  pyproject.toml
snap/: snapcraft.yaml
